@@ -35,6 +35,7 @@
    DBModel Core v34.
 
    - my_stamp_xxx() functions now accept a display format (todo #1318).
+   - my_utils_file_is_readable_file(): renamed to my_utils_file_is_readable().
    - ofaBackupAssistant: new class.
    - ofaDossierProps: new class.
    - ofa_idbconnect_backup_db(): new function.
